fix: imagem alignment & projects responsive mode

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,7 +50,12 @@
 
 @media (max-width: 640px) {
     nav {
-        background-color: #F3EEE8;
+        background-color: inherit;
+    }
+
+    .logo {
+        width: 25vh;
+        padding-top: 16px;
     }
 
     .options {
