--- a/src/app/pages/home/forms/forms.component.css
+++ b/src/app/pages/home/forms/forms.component.css
@@ -79,6 +79,7 @@
     
     .pfp {
         padding: 20px;
+        height: 40vh;
     }
 }
 
